displays and can now add new notes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/parrnicholasj/noteTaker#readme",
   "dependencies": {
-    "mysql": "^2.17.1"
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.0"
   }
 }
